# python-clictestclient

./: .coveragerc  .gitignore  .gitreview  .mailmap  .testr.conf  CONTRIBUTING.rst  README.rst  run_tests.sh  setup.cfg  tox.ini
clictestclient/: __init__.py  _i18n.py  client.py  exc.py  shell.py
clictestclient/common/: base.py  exceptions.py  http.py  https.py  utils.py
clictestclient/openstack/common/: _i18n.py
clictestclient/openstack/common/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py  utils.py
clictestclient/v1/: __init__.py  client.py  objectspy.py  shell.py  versions.py
tools/: clictest.bash_completion  tox_install.sh
